WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287095
Crash in com.apple.WebKit.WebContent at com.apple.WebKit: WebKit::WebExtensionAPIEvent::removeAllListeners
https://bugs.webkit.org/show_bug.cgi?id=287095
Summary
Crash in com.apple.WebKit.WebContent at com.apple.WebKit: WebKit::WebExtensio...
Elijah Sawyers
Reported
2025-02-05 10:34:39 PST
rdar://144211832
Attachments
Add attachment
proposed patch, testcase, etc.
Elijah Sawyers
Comment 1
2025-02-05 10:51:03 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40061
EWS
Comment 2
2025-02-05 15:47:56 PST
Committed
289898@main
(7f8613c028df): <
https://commits.webkit.org/289898@main
> Reviewed commits have been landed. Closing PR #40061 and removing active labels.
EWS
Comment 3
2025-02-10 14:16:32 PST
Committed
289651.79@safari-7621-branch
(7ebf85ae71c5): <
https://commits.webkit.org/289651.79@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2552 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug